# resetting_rw

./: Cargo.toml
python/: MFPT.py  analytics.py  mfpt_beta.py  mfpt_exec.py
src/: analytical.rs  build.rs  config.rs  main.rs  misc.rs  parse.rs  sync_queue.rs  walker.rs
src/analytical/: eq23.rs  fig4.rs
src/walker/: efficient_mirror.rs  even_more_efficient_mirror.rs  ld.rs  simple.rs  simple_mirror.rs  uniform_mirror.rs
