[package]
name = "resetting_rw"
version = "0.1.1"
edition = "2021"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "0.17", features = ["improved_unicode", "rayon"]}
rand_pcg = { version = "0.3.1", features = ["serde1"]}
rand_distr = "0.4.3"
rand = "0.8.5"
glob = "^0.3.1"
serde_json = "^1.0.113"
rayon = "^1.8.1"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "b9b9cc5921ed580f3a5e423a0c14d64bf7f7d032" }
serde = "^1.0.196"
humantime = "^2.1"
clap = {version = "^4.4.18", features=["derive", "cargo", "color", "help"]}
fs-err = "2.11.0"
camino = "1.1.6"
itertools = "0.12.1"
ordered-float = "4.2.0"
derivative = "2.2.0"
kahan = "0.1.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[build-dependencies]
chrono = "0.4.33"
